@@ -378,10 +378,12 @@ int configure (const options_t *options, interface_t *iface,
 
 		/* Only reset things if we had set them before */
 		if (iface->previous_address.s_addr != 0) {
-			del_address (iface->name, iface->previous_address,
-						 iface->previous_netmask);
-			memset (&iface->previous_address, 0, sizeof (struct in_addr));
-			memset (&iface->previous_netmask, 0, sizeof (struct in_addr));
+			if (! options->keep_address) {
+				del_address (iface->name, iface->previous_address,
+							 iface->previous_netmask);
+				memset (&iface->previous_address, 0, sizeof (struct in_addr));
+				memset (&iface->previous_netmask, 0, sizeof (struct in_addr));
+			}
 
 			restore_resolv (iface->name);
 
@@ -405,13 +407,15 @@ int configure (const options_t *options, interface_t *iface,
 		}
 	}
 
-	if (add_address (iface->name, dhcp->address, dhcp->netmask,
-					 dhcp->broadcast) < 0 && errno != EEXIST)
-		return -1;
+	if (! options->doinform || ! has_address (iface->name, dhcp->address))
+		if (add_address (iface->name, dhcp->address, dhcp->netmask,
+						 dhcp->broadcast) < 0 && errno != EEXIST)
+			return -1;
 
 	/* Now delete the old address if different */
-	if (iface->previous_address.s_addr != dhcp->address.s_addr
-		&& iface->previous_address.s_addr != 0)
+	if (iface->previous_address.s_addr != dhcp->address.s_addr &&
+		iface->previous_address.s_addr != 0 &&
+		! options->keep_address)
 		del_address (iface->name, iface->previous_address, iface->previous_netmask);
 
 #ifdef __linux__
